# Hangman

./: .gitignore  Communication.md  README.md  TODO.md
client/: MainWindow.ui  client.py  gui.py  resources.py  resources.qrc
klient/: MainWindow.ui  client.py  gui.py  main.py  resources.py  resources.qrc  ui_skeleton.py
server/: CMakeLists.txt  Game.cpp  Game.h  Lobby.cpp  Lobby.h  Player.h  Settings.h  constants.h  handle-client-message.cpp  handle-client-message.h  hangman-server.cpp  helpers.cpp  helpers.h  network.cpp  network.h  sendToClient.cpp  sendToClient.h
serwer/: CMakeLists.txt  Game.cpp  Game.h  Lobby.cpp  Lobby.h  Player.h  Settings.h  comunication-functions.cpp  comunication-functions.h  constants.h  handle-client-message.cpp  handle-client-message.h  hangman-server.cpp  helpers.cpp  helpers.h  network-utils.cpp  network-utils.h  network.cpp  network.h  sendToClient.cpp  sendToClient.h  words.json
